Add file uploads and viewing the image

--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -10,6 +10,16 @@
       </ul>
     </div>
   <% end %>
+  
+  <p>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </p>
+  
+  <p>
+    <%= f.file_field :document %>
+    <%= f.hidden_field :document_cache %>
+  </p>
 
   <div class="actions">
     <%= f.submit %>
