--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -5,10 +5,12 @@
     <th></th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 
 <% @documents.each do |document| %>
   <tr>
+    <td><%= document.title %></td>
     <td><%= link_to 'Show', document %></td>
     <td><%= link_to 'Edit', edit_document_path(document) %></td>
     <td><%= link_to 'Destroy', document, confirm: 'Are you sure?', method: :delete %></td>
